--- a/Front/style.css
+++ b/Front/style.css
@@ -1,10 +1,18 @@
 header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  background-color: #222;
+  padding: 10px;
+  background-color: #666;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.logo {
+font-size: 2rem;
+font-weight: bold;
+color: #fff;
+text-decoration: none;  
 }
 
 .title-container {
@@ -85,6 +93,11 @@ h1 {
   margin: 0;
 }
 
+nav {
+  display: flex;
+  align-items: center;
+}
+
 nav ul {
   list-style: none;
   margin: 0;
@@ -99,7 +112,7 @@ nav li {
 nav a {
   color: #fff;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 1.5rem;
 }
 
 nav a:hover {
