Signed-off-by: Hector Javier Barrantes Prieto <javier.barrantes@novassist.local>

--- a/Front/css/style.css
+++ b/Front/css/style.css
@@ -1,11 +1,13 @@
+/* fuentes*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  padding: 10px;
-  background-color: #666;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  background-color: #444242;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
